docs: correct icon names

--- a/docs/app/views/examples/components/dynamic_select/_preview.html.erb
+++ b/docs/app/views/examples/components/dynamic_select/_preview.html.erb
@@ -2,7 +2,7 @@
   color: "warning",
   title: "Deprecated",
   desc:  "Dynamic Select is deprecated and no longer recommended. Please reach out for #{link_to "support or any questions", "/pages/support"}.".html_safe,
-  icon_name: "sage-icon-danger-filled",
+  icon_name: "danger-filled",
 } %>
 
 <h3>Working with the<code>Sage Dynamic Select Input (Select2)</code></h3>
