--- a/docs/app/views/examples/components/panel/_preview.html.erb
+++ b/docs/app/views/examples/components/panel/_preview.html.erb
@@ -10,7 +10,7 @@ Ut elementum id leo ac fringilla.
 <%= sage_component SageAlert, {
   color: "warning",
   desc: "While this page depicts Panels within Cards, this is merely a consequence of our documentation structure and not a pattern that should be implemented elsewhere.",
-  icon_name: "sage-icon-warning",
+  icon_name: "warning",
 } %>
 
 <h2>Overview</h2>
