--- a/docs/app/views/examples/components/catalog_item/_preview.html.erb
+++ b/docs/app/views/examples/components/catalog_item/_preview.html.erb
@@ -2,7 +2,7 @@
   color: "warning",
   title: "Deprecated",
   desc:  "Catalog Item usage is no longer recommended. Please use the #{link_to "List component", "/pages/component/list"} instead to construct a similar experience or as a replacement option.".html_safe,
-  icon_name: "sage-icon-danger-filled",
+  icon_name: "danger-filled",
 } %>
 
 <%= sage_component SageCardList, {} do %>
