docs: remove legacy instructions

--- a/docs/app/views/pages/icon.html.erb
+++ b/docs/app/views/pages/icon.html.erb
@@ -189,7 +189,7 @@ dialogue_icons = [
 <%= content_for :heading do %>
 <%= md(%(
 # Icons
-<p class="docs-heading__lead">Our icon set includes those shown below. The typical pattern for these is to use an <code>&lt;i&gt;</code> tag with a class as indicated below.</p>
+<p class="docs-heading__lead">Our icon set includes those shown below.</p>
 )) %>
 <% end %>
 <%= content_for :quick_links do %>
