Sage: Integrate Pine into icons (#1890)
* chore: update browserslist dependency

* feat: add pine icons to sage

* feat(icon): work pine-icon into sage-icon

* feat(icon): add pds-icon to both rails and react components

* feat: convert rails button icons to pine

* fix: correct icon z-index

* revert: scripts in manager-head

* feat: convert rails icon to pine

* fix: add expandable card styles for pds-icon

* feat(alert): convert rails icon to pine

* fix(avatar): add styles for pds-icon

* feat(badge): convert rails icon to pine

* feat(banner): convert rails icon to pine

* feat(breadcrumbs): convert rails icon to pine

* feat(choice): convert rails icon to pine

* feat(copytext): convert rails icon to pine

* fix(button): add icon for disclosure btn

* fix(expandablecard): adjust icon spacing

* feat(iconcard): convert rails icon to pine

* fix: correct missing icons

* feat(forminput): convert rails icon to pine

* fix(formsection): correct missing icons

* feat(formselect): convert rails icon to pine

* fix(formselect): add message icon

* feat(textarea): convert rails icon to pine

* fix(hint): correct icon alignment

* feat(link): convert rails icon to pine

* fix: linting errors

* ci: add step to configure authToken for NPM

* test(react-icon): comment out aria-lable test

* feat(navlink): convert rails icon to pine

* feat(pageheading): convert help link icon to pine

* docs(icon): convert icons to pine

* feat(dropdownitem): convert rails icon to pine

* feat(search): convert rails icon to pine

* feat(statusicon): convert rails icon to pine

* feat(sortable): convert rails icon to pine

* feat(label): convert rails icon to pine

* feat(tab): convert rails icon to pine

* fix(tabs): correct icon name typo

* fix(search): correct toolbar alignment

* fix(catalogitem): fix missing icon

* fix: various icon bug fixes

* fix(docs): correct home icon

* fix(pagination): r

--- a/docs/app/views/examples/components/catalog_item/_preview.html.erb
+++ b/docs/app/views/examples/components/catalog_item/_preview.html.erb
@@ -2,7 +2,7 @@
   color: "warning",
   title: "Deprecated",
   desc:  "Catalog Item usage is no longer recommended. Please use the #{link_to "List component", "/pages/component/list"} instead to construct a similar experience or as a replacement option.".html_safe,
-  icon_name: "sage-icon-danger-filled",
+  icon_name: "danger-filled",
 } %>
 
 <%= sage_component SageCardList, {} do %>
@@ -75,7 +75,7 @@
   <% 2.times do %>
     <%= sage_component SageCatalogItem, {
       title: "Fun For All – The Children Call: Their Favorite Time Of Year",
-      icon: "sage-icon-mail-xl",
+      icon: "mail",
       href: "#"
     } do %>
       <%= sage_component SageButton, {
