--- a/docs/lib/sage_rails/app/views/sage_components/_sage_search.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_search.html.erb
@@ -13,6 +13,7 @@
     <%= component.label_text %>
   </label>
   <div class="sage-search__field-wrapper">
+    <pds-icon name="search-small" class="<%= SageClassnames::SPACERS::SM_LEFT %>" color="<%= SageTokens::COLOR_PALETTE[:CHARCOAL_200] %>" style="z-index:2"></pds-icon>
     <input
       id="<%= component.id %>"
       class="sage-search__input"
