--- a/docs/app/views/pages/icon.html.erb
+++ b/docs/app/views/pages/icon.html.erb
@@ -189,7 +189,7 @@ dialogue_icons = [
 <%= content_for :heading do %>
 <%= md(%(
 # Icons
-<p class="docs-heading__lead">Our icon set includes those shown below. The typical pattern for these is to use an <code>&lt;i&gt;</code> tag with a class as indicated below.</p>
+<p class="docs-heading__lead">Our icon set includes those shown below.</p>
 )) %>
 <% end %>
 <%= content_for :quick_links do %>
@@ -237,7 +237,7 @@ Marketing uses the Megaphone icon. We do not use the megaphone icon for other tr
   <% action_icons.each do |icon| %>
     <div class="docs-icon-inline">
       <%= sage_component SageCardRow, { grid_template: "it" } do %>
-        <i class="sage-icon-<%= icon[:name] %>-xl" aria-hidden="true"></i>
+        <pds-icon class="sage-icon-<%= icon[:name] %>-xl" name="<%= icon[:name] %>" size="xl"></pds-icon>
         <p class="docs-icon-inline__label"><%= icon[:name] %></p>
         <p class="docs-icon-inline__usage"><strong><%= icon[:action] %></strong> Actions</p>
       <% end %>
@@ -250,7 +250,7 @@ Marketing uses the Megaphone icon. We do not use the megaphone icon for other tr
   <% feature_icons.each do |icon| %>
     <div class="docs-icon-inline">
       <%= sage_component SageCardRow, { grid_template: "it" } do %>
-        <i class="sage-icon-<%= icon[:name] %>-xl" aria-hidden="true"></i>
+        <pds-icon class="sage-icon-<%= icon[:name] %>-xl" name="<%= icon[:name] %>" size="xl"></pds-icon>
         <p class="docs-icon-inline__label"><%= icon[:name] %></p>
         <p class="docs-icon-inline__usage"><strong><%= icon[:action] %></strong></p>
       <% end %>
@@ -263,7 +263,7 @@ Marketing uses the Megaphone icon. We do not use the megaphone icon for other tr
   <% dialogue_icons.each do |icon| %>
     <div class="docs-icon-inline">
       <%= sage_component SageCardRow, { grid_template: "it" } do %>
-        <i class="sage-icon-<%= icon[:name] %>-xl" aria-hidden="true"></i>
+        <pds-icon class="sage-icon-<%= icon[:name] %>-xl" name="<%= icon[:name] %>" size="xl"></pds-icon>
         <p class="docs-icon-inline__label"><%= icon[:name] %></p>
         <p class="docs-icon-inline__usage"><strong><%= icon[:action] %></strong> Dialogues</p>
       <% end %>
