--- a/packages/sage-assets/lib/stylesheets/components/_choice.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_choice.scss
@@ -111,7 +111,7 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
   flex-flow: row-reverse;
 
   &::#{$-choice-el-arrow} {
-    @include sage-icon-base(caret-right, lg);
+    @include sage-icon-base(caret-right, lg, pine);
 
     margin: 0 0 0 sage-spacing(sm);
     color: sage-color(charcoal, 400);
@@ -134,9 +134,14 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
     transition: color map-get($sage-transitions, default);
   }
 
+  pds-icon {
+    margin-top: var(--icon-top-offset);
+  }
+
   &.sage-choice--vertical-align-icon-start::#{$-choice-el-icon} {
     align-self: start;
     margin-top: var(--icon-top-offset);
+
   }
 
   @media (max-width: sage-breakpoint(xs-max)) {
@@ -232,4 +237,11 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
 
   margin-top: sage-spacing(2xs);
   color: sage-color(charcoal, 200);
+}
+
+pds-icon {
+  .sage-choice--vertical-align-icon-start & {
+    align-self: start;
+    margin-top: var(--icon-top-offset);
+  }
 }
