Next Version Bump (#1894)
* fix: removes dasherize from variable used for attributes (#1893)

* chore: update browserslist dependency

* fix: removes dasherize variable used for attributes

* fix: remove update

* fix: adjust id conditional

* Sage: Integrate Pine into icons (#1890)

* chore: update browserslist dependency

* feat: add pine icons to sage

* feat(icon): work pine-icon into sage-icon

* feat(icon): add pds-icon to both rails and react components

* feat: convert rails button icons to pine

* fix: correct icon z-index

* revert: scripts in manager-head

* feat: convert rails icon to pine

* fix: add expandable card styles for pds-icon

* feat(alert): convert rails icon to pine

* fix(avatar): add styles for pds-icon

* feat(badge): convert rails icon to pine

* feat(banner): convert rails icon to pine

* feat(breadcrumbs): convert rails icon to pine

* feat(choice): convert rails icon to pine

* feat(copytext): convert rails icon to pine

* fix(button): add icon for disclosure btn

* fix(expandablecard): adjust icon spacing

* feat(iconcard): convert rails icon to pine

* fix: correct missing icons

* feat(forminput): convert rails icon to pine

* fix(formsection): correct missing icons

* feat(formselect): convert rails icon to pine

* fix(formselect): add message icon

* feat(textarea): convert rails icon to pine

* fix(hint): correct icon alignment

* feat(link): convert rails icon to pine

* fix: linting errors

* ci: add step to configure authToken for NPM

* test(react-icon): comment out aria-lable test

* feat(navlink): convert rails icon to pine

* feat(pageheading): convert help link icon to pine

* docs(icon): convert icons to pine

* feat(dropdownitem): convert rails icon to pine

* feat(search): convert rails icon to pine

* feat(statusicon): convert rails icon to pine

* feat(sortable): convert rails icon to pine

* feat(label): convert rails icon to pine

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_form_select.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_form_select.html.erb
@@ -1,8 +1,7 @@
 <%
   # Temporary variables here until refactor for 'name' is complete; see https://kajabi.atlassian.net/browse/SAGE-214
   label = component.label || component.name;
-  select_id = component.id.downcase.dasherize if component.id;
-  select_name = label.downcase.dasherize;
+  select_id = component.id ? component.id.downcase : label.downcase.dasherize;
 %>
 
 <div class="
@@ -48,11 +47,22 @@
       <% end %>
     <% end %>
   </select>
-  <label class="sage-select__label" for="<%= select_name %>"><%= label %></label>
-  <i class="sage-select__arrow" aria-hidden="true"></i>
+  <label class="sage-select__label" for="<%= select_id %>"><%= label %></label>
+  <pds-icon
+    aria-hidden="true"
+    class="sage-select__arrow"
+    color="<%= SageTokens::COLOR_PALETTE[:CHARCOAL_100] %>"
+    name="caret-down"
+    size=""
+  ></pds-icon>
   <% if component.message.present? %>
     <div class="sage-select__info">
-      <div class="sage-select__message"><%= component.message %></div>
+      <div class="sage-select__message">
+        <% if component.has_error %>
+          <pds-icon name="danger" class="<%= SageClassnames::SPACERS::XS_RIGHT %>"></pds-icon>
+        <% end %>
+        <%= component.message %>
+      </div>
     </div>
   <% end %>
 </div>
