fix: update existing core color tokens

--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -24,7 +24,7 @@
 ///
 /// color color-base-primary-100-hex
 ///
-$sd-sage-color-base-primary-100-hex: #Fee2e1;
+$sd-sage-color-base-primary-100-hex: #fee2e1;
 ///
 /// color color-base-primary-100-code
 ///
@@ -360,7 +360,7 @@ $sd-sage-color-base-purple-300-classname: "t-sage--color-purple-300";
 ///
 /// color color-base-purple-400-hex
 ///
-$sd-sage-color-base-purple-400-hex: #402Fa4;
+$sd-sage-color-base-purple-400-hex: #402fa4;
 ///
 /// color color-base-purple-400-code
 ///
@@ -1014,7 +1014,7 @@ $sd-sage-color-combos-info-default-foreground-accent: #572627;
 ///
 /// color combos color-combos-info-default-background
 ///
-$sd-sage-color-combos-info-default-background: #Fee2e1;
+$sd-sage-color-combos-info-default-background: #fee2e1;
 ///
 /// color combos color-combos-info-default-background-accent
 ///
@@ -1038,7 +1038,7 @@ $sd-sage-color-combos-info-subtle-background: #fda5a5;
 ///
 /// color combos color-combos-info-bold-foreground
 ///
-$sd-sage-color-combos-info-bold-foreground: #Fee2e1;
+$sd-sage-color-combos-info-bold-foreground: #fee2e1;
 ///
 /// color combos color-combos-info-bold-background
 ///
@@ -1046,7 +1046,7 @@ $sd-sage-color-combos-info-bold-background: #ef4444;
 ///
 /// color combos color-combos-locked-default-foreground
 ///
-$sd-sage-color-combos-locked-default-foreground: #402Fa4;
+$sd-sage-color-combos-locked-default-foreground: #402fa4;
 ///
 /// color combos color-combos-locked-default-foreground-accent
 ///
@@ -1066,7 +1066,7 @@ $sd-sage-color-combos-locked-default-icon-background-accent: #533be5;
 ///
 /// color combos color-combos-locked-subtle-foreground
 ///
-$sd-sage-color-combos-locked-subtle-foreground: #402Fa4;
+$sd-sage-color-combos-locked-subtle-foreground: #402fa4;
 ///
 /// color combos color-combos-locked-subtle-foreground-accent
 ///
