--- a/packages/sage-assets/lib/stylesheets/components/_dot.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dot.scss
@@ -42,6 +42,11 @@ $-sage-dot-size--badge: rem(6px);
 
 @each $-color-name, $-color-sliders in $sage-colors {
   .sage-dot--color-#{"" + $-color-name} {
-    --sage-dot-color: #{sage-color($-color-name)};
+    @if ($-color-name ==blue) {
+      --sage-dot-color: #{sage-color($-color-name, 30)};
+    }
+    @else {
+      --sage-dot-color: #{sage-color($-color-name)};
+    }
   }
 }
