--- a/packages/sage-assets/lib/stylesheets/components/_dot.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dot.scss
@@ -42,8 +42,14 @@ $-sage-dot-size--badge: rem(6px);
 
 @each $-color-name, $-color-sliders in $sage-colors {
   .sage-dot--color-#{"" + $-color-name} {
-    @if ($-color-name ==blue) {
-      --sage-dot-color: #{sage-color($-color-name, 30)};
+    @if ($-color-name == blue) {
+      --sage-dot-color: #{sage-color($-color-name, 60)};
+    }
+    @else if ($-color-name == green) {
+      --sage-dot-color: #{sage-color($-color-name, 60)};
+    }
+    @else if ($-color-name == mercury) {
+      --sage-dot-color: #{sage-color($-color-name, 50)};
     }
     @else {
       --sage-dot-color: #{sage-color($-color-name)};
