--- a/packages/sage-assets/lib/stylesheets/core/_typography.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_typography.scss
@@ -210,11 +210,20 @@ body:not(.sage-excluded),
 // Generate text color modifiers
 @each $color-name, $color-slider in $sage-colors {
   $color-value: "";
+
   @if ($color-name == blue) {
-    $color-value: sage-color($color-name, 30);
-  } @else if ($color-name == grey) {
+    $color-value: sage-color($color-name, 60);
+  }
+  @else if ($color-name == green) {
+    $color-value: sage-color($color-name, 60);
+  }
+  @else if ($color-name == mercury) {
+    $color-value: sage-color($color-name, 50);
+  }
+  @else if ($color-name == grey) {
     $color-value: sage-color($color-name, 500);
-  } @else {
+  }
+  @else {
     // Default color values
     $color-value: sage-color($color-name);
   }
