--- a/docs/lib/sage-frontend/stylesheets/docs/_colors.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_colors.scss
@@ -52,45 +52,34 @@
       font-size: sage-font-size(body);
       background: $hex;
 
-      @if (($name == white) or ($name == grey)) {
-        @if ($name == grey and $value > 40) {
-          color: sage-color(white);
-        }
-        @else {
-          color: sage-color(charcoal, 500);
-        }
+      @if ($name == grey and $value > 40) {
+        color: sage-color(white);
+      }
+      @else if ($name == white or $name == grey) {
+        color: sage-color(charcoal, 500);
       }
       @else if ($name == black or $name == charcoal) {
         color: sage-color(white);
       }
+      @else if ($name == blue and $value > 40) {
+        color: sage-color(blue, 20);
+      }
       @else if ($name == blue) {
-        @if ($value > 40) {
-          color: sage-color(blue, 20);
-        }
-        @else {
-          color: sage-color(blue, 95);
-        }
+        color: sage-color(blue, 95);
       }
-      @else if ($name == mercury) {
-        @if ($value > 20) {
-          color: sage-color(white);
-        }
-        @else {
-          color: sage-color(mercury, 50);
-        }
-      }
-      @else if ($name == green) {
-        @if ($value > 20) {
-          color: sage-color(white);
-        }
-        @else {
-          color: sage-color(green, 60);
-        }
-      }
-      @else if ($name == yellow and $value > 20) {
+      @else if ($name == mercury and $value > 20) {
         color: sage-color(white);
       }
-      @else if ($name == purple and $value > 30) {
+      @else if ($name == mercury) {
+        color: sage-color(mercury, 50);
+      }
+      @else if ($name == green and $value > 20) {
+        color: sage-color(white);
+      }
+      @else if ($name == green) {
+        color: sage-color(green, 60);
+      }
+      @else if ($name == yellow and $value > 30) {
         color: sage-color(white);
       }
       @else if (lightness($hex) < 65) {
